--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
     <link rel="stylesheet" href="css/chart.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href='https://api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.css' rel='stylesheet' />
+
+
 
 </head>
 
@@ -184,15 +187,45 @@
             <span class="btn btn-danger">Không An toàn</span>
         </p>
         <canvas id="antoanvn"></canvas>
+        <hr>
 
+        <div id='map'></div>
 
-
-
-        <!-- <div id="list"></div> -->
-
-
-
-
+        <hr>
+        <div class="footer">
+            <div class="icon">
+                <h5>GIỚI THIỆU</h5>
+                <p>
+                    <span>Trang theo dõi dịch tễ COVID-19 <br> được viết bằng ngôn ngữ Javascript <br> Cảm ơn các bạn đã
+                        theo dõi!
+                        <br>
+                        <i class="fa fa-copyright"></i>2021 COVID-19
+                    </span>
+                </p>
+            </div>
+            <div class="icon">
+                <h5>KẾT NỐI</h5>
+                <ul>
+                    <li><a href="https://www.facebook.com/imvy.itup"><i class="fa fa-facebook"
+                                style="font-size: 30px;"></i></a> </li>
+                    <li><a href="https://www.instagram.com/imvy.01/"><i class="fa fa-instagram"
+                                style="font-size: 30px;"></i></a></li>
+                    <li><a href="#"><i class="fa fa-twitter" style="font-size: 30px;"></i></a></li>
+                </ul>
+            </div>
+            <div class="icon">
+                <h5>CHỦ ĐỀ</h5>
+                <p>Covid-19 Thế giới</p>
+                <p>Covid-19 Việt Nam</p>
+                <p>An toàn</p>
+            </div>
+            <div class="icon">
+                <h5>LIÊN HỆ</h5>
+                <p><i class="fa fa-map-marker"></i> 44 THÀNH THÁI, P.14, Q.10, TP.HCM</p>
+                <p><i class="fa fa-phone"></i> +84 123 456 789</p>
+                <p><i class="fa fa-envelope"></i> <a href="#">phuongvy012456@gmail.com</a></p>
+            </div>
+        </div>
     </div>
 
 
@@ -203,9 +236,23 @@
     <script src="js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.js"></script>
     <script src="js/chart.js"></script>
+    <script src='https://api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.js'></script>
+    <script>
+        mapboxgl.accessToken =
+            'pk.eyJ1IjoiZGluaHZ5IiwiYSI6ImNrcnN5Njd5aTFocWkybm8xd250MHo2MmIifQ.QOObYu52PP3ZhFix-otDQg';
+        var map = new mapboxgl.Map({
+            container: 'map',
+            style: 'mapbox://styles/mapbox/dark-v10',
+            zoom: 1,
+            center: [0, 20]
+        });
+    </script>
     <script type="module" src="js/map.js"></script>
 
     <script type="text/javascript" src="js/my.js"></script>
+    <script src="https://code.highcharts.com/maps/highmaps.js"></script>
+    <script src="https://code.highcharts.com/maps/modules/exporting.js"></script>
+    <script src="https://code.highcharts.com/mapdata/countries/vn/vn-all.js"></script>
 
 
 </body>
