--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
                         href="https://github.com/ExpDev07/coronavirus-tracker-api">https://github.com/ExpDev07/coronavirus-tracker-api</a>
                     <a href="https://github.com/ExpDev07/coronavirus-tracker-api">(đang sử dụng)</a>
                 </p>
+                <p>Link3: <a href="https://corona.lmao.ninja/v2/countries/">
+                        https://corona.lmao.ninja/v2/countries/</a>
+                    <a href="https://corona.lmao.ninja/v2/countries/">(đang sử dụng)</a>
+                </p>
+
 
             </div>
             <p class="btn btn-danger"><b style="color: rgb(243, 225, 225);">Theo dõi tình trạng COVID tại: </b>
